# DA-Graph-Coloring

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  presentation.html
code/include/: graph.h  graphBuilder.h  outputWriter.h  parser.h  registerAllocator.h
code/src/: main.cpp  parser.cpp
data/: README.md
data/output/: allocation1.txt  allocation2.txt  allocation3.txt  allocation6.txt  allocation7.txt  extra.txt
data/ranges/: ranges_extra.txt
data/registers/: registers4.txt  registers_extra.txt
data_structures/: Graph.h
scripts/: batch.sh  run-default.sh
src/: GraphColoring.cpp  GraphColoring.h  InterferenceGraph.cpp  InterferenceGraph.h  LiveRange.h  Menu.cpp  Menu.h  OutputWriter.cpp  OutputWriter.h  Parser.cpp  Parser.h  Web.cpp  Web.h  WebBuilder.cpp  WebBuilder.h  main.cpp
